<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="horizontal"
    tools:context=".activity.ConjugatorAct">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/firstrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            android:paddingTop="3dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="171dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/root_word"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/verbcase"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/autoCompleteTextView"
                android:paddingTop="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toEndOf="@+id/autoCompleteTextView"
                app:layout_constraintTop_toTopOf="@+id/autoCompleteTextView"
                app:layout_constraintVertical_bias="0.378">

                <RadioButton
                    android:id="@+id/indicative"
                    android:layout_width="119dp"

                    android:layout_height="20dp"
                    android:checked="true"
                    android:text="@string/indicative" />

                <RadioButton
                    android:id="@id/subj"

                    android:layout_width="119dp"
                    android:layout_height="20dp"

                    android:text="@string/subjunctive"

                    android:visibility="visible" />

                <RadioButton
                    android:id="@id/jussive"

                    android:layout_width="119dp"
                    android:layout_height="20dp"

                    android:text="@string/jussive"

                    android:visibility="visible" />

                <RadioButton
                    android:id="@id/emphasized"

                    android:layout_width="119dp"
                    android:layout_height="20dp"

                    android:text="Emphasized"

                    android:visibility="visible" />
            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/fourthlabel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:layout_gravity="bottom"
                android:layout_margin="12dp"
                android:layout_weight="1.0"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:dividerHeight="0.0px"

                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:layout_anchorGravity="bottom"

                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verbcase"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/color_primary_variant"
                app:strokeWidth="1dp">

                <TextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Mujarrad/Augmented"
                    android:paddingStart="5dp"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/thirdrowmujarrad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourthlabel">

                <com.google.android.material.chip.Chip
                    android:id="@+id/nasara"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Nasara"
                    android:paddingStart="5dp"

                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/zaraba"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="ZARABA"

                    android:paddingStart="5dp"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fataha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Fatha"
                    android:paddingStart="5dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourthrowmujarrad"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/thirdrowmujarrad"
                app:layout_constraintTop_toBottomOf="@+id/thirdrowmujarrad">

                <com.google.android.material.chip.Chip
                    android:id="@+id/samia"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nasara"
                    android:layout_weight="1.0"
                    android:hint="Samia"
                    android:paddingStart="5dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/karuma"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Karuma"
                    android:paddingStart="20dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/hasiba"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Hasiba"
                    android:paddingStart="20dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/fifthrowlbl"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fourthrowmujarrad"
                android:layout_gravity="bottom"
                android:layout_margin="12dp"
                android:layout_weight="1.0"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:dividerHeight="0.0px"

                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:layout_anchorGravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourthrowmujarrad"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/color_primary_variant"
                app:strokeWidth="1dp">

                <TextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Mazeed/Augmented"
                    android:paddingStart="5dp"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/mazeedseventhrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@+id/fifthrowlbl">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tafeel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="tafeel"
                    android:paddingStart="5dp"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mufala"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Mufala"
                    android:paddingStart="5dp"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ifal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Ifal"
                    android:paddingStart="5dp"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tafaul"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Tafaul"
                    android:paddingStart="5dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mazeedsecondrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mazeedseventhrow"
                app:layout_constraintTop_toBottomOf="@+id/mazeedseventhrow">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tafaaaul"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1.0"
                    android:hint="Tafaaul"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/infala"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Infala"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/iftiala"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Iftiala" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/istifala"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1.0"
                    android:hint="Istifala"
                    android:textAlignment="center" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="20dp"

                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/color_primary_variant"
                app:strokeWidth="1dp"
                android:dividerHeight="0.0px"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mazeedsecondrow" >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">




                 <com.google.android.material.button.MaterialButton
                     android:background="@color/transparent"
                     android:id="@+id/mujarradbtn"

                     android:layout_weight="1.0"


                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"

                     android:hint="Mujarrad"
                     />


                 <com.google.android.material.button.MaterialButton

                     android:id="@+id/mazeedbtn"
                     android:background="@color/transparent"
                     android:layout_weight="1.0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/Mazeed"
                     android:elevation="6dp"
                     />
                 <com.google.android.material.button.MaterialButton
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:background="@color/transparent"
                     android:id="@+id/fab"
                     android:layout_weight="1.0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:text="@string/Setting"

                     />





             </LinearLayout>







            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:id="@+id/linearLayout"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/mazeedsecondrow">

                <org.sj.verbs.CustomKeyboard.OvalCustomKeyboard
                    android:id="@+id/arabic_keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="visible" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


    <include layout="@layout/conjugator_bottom_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>







